--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link href="/main.css" type="text/css" rel="stylesheet">
+    <link href="static/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <h1>The name of the framework is {{ name }}</h1>
